Добавляет базовую стилизацию в index.html

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,35 @@
-// Начните писать стили здесь
+@import "fonts",
+  "blocks/visually-hidden",
+  "blocks/about",
+  "blocks/companion",
+  "blocks/companions-list",
+  "blocks/companions",
+  "blocks/copyright",
+  "blocks/destination",
+  "blocks/destinations-list",
+  "blocks/destinations",
+  "blocks/feedback",
+  "blocks/feedback-quote",
+  "blocks/header",
+  "blocks/page-footer",
+  "blocks/page-header",
+  "blocks/page-main",
+  "blocks/path-list",
+  "blocks/profile-list",
+  "blocks/profile-option",
+  "blocks/profile",
+  "blocks/social-item",
+  "blocks/social",
+  "blocks/user-nav",
+  "blocks/country-filter",
+  "blocks/companion-filter",
+  "blocks/catalog",
+  "blocks/catalog-list",
+  "blocks/user",
+  "blocks/tag-list",
+  "blocks/country-list",
+  "blocks/want-visit",
+  "blocks/transport",
+  "blocks/level",
+  "blocks/page-buttons",
+  "blocks/main-nav";
