Добавляет базовую стилизацию в: - catalog.html - form.html

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -12,6 +12,10 @@
   background-size: 320px 100%;
 }
 
+.page-header__logo {
+  background-color: #161c35;
+}
+
 .page-header__text {
   font-size: 36px;
   line-height: 40px;
