--- a/source/sass/blocks/companion.scss
+++ b/source/sass/blocks/companion.scss
@@ -57,6 +57,7 @@
   position: relative;
 
   width: 100%;
+  padding-bottom: 20px;
 
   background-color: #ffffff;
   border-bottom-left-radius: 8px;
@@ -137,19 +138,11 @@
 
 .companion__tags {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
   align-content: center;
   align-items: center;
-  list-style: none;
   margin: 16px 0;
   padding: 0 46px;
-
-  font-family: "BloggerSans", "Arial", "Helvetica", sans-serif;
-  font-size: 16px;
-  line-height: 18px;
-  color: #444444;
 
   .tag-list__item {
     margin-right: 3px;
@@ -160,9 +153,26 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+  margin-bottom: 20px;
   padding: 0;
   padding-bottom: 21px;
 
   list-style: none;
+
+  .transport__item {
+    background-color: inherit;
+  }
+}
+
+.companion__avatar {
+  $box-size: 70px;
+
+  display: block;
+  width: $box-size;
+  height: $box-size;
+
+  border-radius: 50%;
 }
