--- a/source/sass/blocks/user-nav.scss
+++ b/source/sass/blocks/user-nav.scss
@@ -1,16 +1,17 @@
+$btn-height: 40px;
+
 .user-nav {
   position: absolute;
-  bottom: 0;
+  bottom: -$btn-height/2;
   left: 0;
 
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 100%;
 }
 
 .user-nav__button {
-  $btn-height: 40px;
-
   box-sizing: border-box;
 
   display: flex;
